--- a/trueface-sdk-android/app/src/main/res/layout/activity_main.xml
+++ b/trueface-sdk-android/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
+    android:orientation="vertical"
     android:layout_height="fill_parent"
     android:layout_width="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -10,4 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-</RelativeLayout>
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/spoof_detection"
+        android:text="@string/spoof_detection"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
