--- a/trueface-sdk-android/app/src/main/res/layout/activity_main.xml
+++ b/trueface-sdk-android/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/enroll"
+        android:text="@string/enroll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
