--- a/trueface-sdk-android/app/src/main/res/layout/activity_main.xml
+++ b/trueface-sdk-android/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/scan_document"
+        android:text="@string/scan_document"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/frontBitmap"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/backBitmap"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
