--- a/trueface-sdk-android/sdk/src/main/res/values/colors.xml
+++ b/trueface-sdk-android/sdk/src/main/res/values/colors.xml
@@ -1,24 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#880E4F</color>
+    <color name="backgroud_color">#C4CADC</color>
+    <color name="backgroud_color2">#CFFADF</color>
+    <color name="backgroud_color3">#EAAADC</color>
+    <color name="backgroud_color4">#FECDDC</color>
+    <color name="backgroud_Transparent">#FFFFFF</color>
+    <color name="white">#ffffff</color>
 
-    <color name="md_slide_background">#000000</color>
-    <color name="md_slide_buttons">#FF5722</color>
+    <color name="black_overlay">#66000000</color>
 
-    <color name="first_slide_background">#E91E63</color>
-    <color name="first_slide_buttons">#880E4F</color>
-
-    <color name="second_slide_background">#9C27B0</color>
-    <color name="second_slide_buttons">#4A148C</color>
-
-    <color name="third_slide_background">#009688</color>
-    <color name="third_slide_buttons">#004D40</color>
-
-    <color name="fourth_slide_background">#795548</color>
-    <color name="fourth_slide_buttons">#3E2723</color>
-
-    <color name="custom_slide_background">#3F51B5</color>
-    <color name="custom_slide_buttons">#1A237E</color>
 </resources>
