--- a/trueface-sdk-android/sdk/src/main/res/values/dimens.xml
+++ b/trueface-sdk-android/sdk/src/main/res/values/dimens.xml
@@ -1,3 +1,11 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
+
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">8dp</dimen>
+    <dimen name="activity_vertical_margin">8dp</dimen>
+    <bool name="isTablet">false</bool>
+
+    <dimen name="card_frame_width">240dp</dimen>
+    <dimen name="card_frame_height">152dp</dimen>
+
 </resources>
